# GCollection

./: Makefile.am  autogen.sh  configure.ac
docs/: Makefile.am
gcollection/: Makefile.am  gc-array-list-iterator.c  gc-array-list-iterator.h  gc-array-list.c  gc-array-list.h  gc-iterable.c  gc-iterable.h  gc-iterator.c  gc-iterator.h  gcollection.h  gcollection.pc.in
tests/: Makefile.am  test-array-list-iterator.c  test-array-list.c
